--- a/Manifests/ManifestsApple/com.apple.vpn.managed.plist
+++ b/Manifests/ManifestsApple/com.apple.vpn.managed.plist
@@ -9,13 +9,13 @@
 	<key>pfm_domain</key>
 	<string>com.apple.vpn.managed</string>
 	<key>pfm_format_version</key>
-	<integer>1</integer>
+	<real>1</real>
 	<key>pfm_interaction</key>
 	<string>combined</string>
 	<key>pfm_ios_min</key>
 	<string>4.0</string>
 	<key>pfm_last_modified</key>
-	<date>2024-09-04T13:46:53Z</date>
+	<date>2025-03-04T15:48:48Z</date>
 	<key>pfm_macos_min</key>
 	<string>10.7</string>
 	<key>pfm_platforms</key>
@@ -235,7 +235,13 @@ If the type is 'VPN' or 'TransparentProxy', then the system requires a value for
 			</array>
 			<key>pfm_description</key>
 			<string>An identifier for a vendor-specified configuration dictionary when the value for 'VPNType' is 'VPN'.
-If 'VPNType' is 'VPN', the system requires this field. If the configuration targets a VPN solution that uses a network extension provider, then this field contains the bundle identifier of the app that contains the provider. Contact the VPN solution vendor for the value of the identifier.
+If 'VPNType' is 'VPN', the system requires this field. If the configuration targets a VPN solution that uses a VPN plugin, then this field contains the bundle identifier of the plugin. Here are some examples:
+* Cisco AnyConnect: 'com.cisco.anyconnect.applevpn.plugin'
+* Juniper SSL: 'net.juniper.sslvpn'
+* F5 SSL: 'com.f5.F5-Edge-Client.vpnplugin'
+* SonicWALL Mobile Connect: 'com.sonicwall.SonicWALL-SSLVPN.vpnplugin'
+* ``Aruba VIA: 'com.arubanetworks.aruba-via.vpnplugin'
+If the configuration targets a VPN solution that uses a network extension provider, then this field contains the bundle identifier of the app that contains the provider. Contact the VPN solution vendor for the value of the identifier.
 If 'VPNType' is 'IKEv2', then the 'VPNSubType' field is optional and reserved for future use. If it's specified, it needs to contain an empty string.
 Not available in watchOS.</string>
 			<key>pfm_exclude</key>
@@ -3308,6 +3314,10 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 					<string>If '1', allows traffic from all captive networking apps outside the VPN tunnel to perform captive network handling.</string>
 					<key>pfm_name</key>
 					<string>AllowAllCaptiveNetworkPlugins</string>
+					<key>pfm_platforms</key>
+					<array>
+						<string>iOS</string>
+					</array>
 					<key>pfm_range_list</key>
 					<array>
 						<integer>0</integer>
@@ -3332,6 +3342,10 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 					<string>If '1', allows traffic from Captive Web Sheet outside the VPN tunnel.</string>
 					<key>pfm_name</key>
 					<string>AllowCaptiveWebSheet</string>
+					<key>pfm_platforms</key>
+					<array>
+						<string>iOS</string>
+					</array>
 					<key>pfm_range_list</key>
 					<array>
 						<integer>0</integer>
@@ -3351,7 +3365,7 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 				</dict>
 				<dict>
 					<key>pfm_description</key>
-					<string>The array of captive networking apps whose traffic is allowed outside the VPN tunnel, to perform captive network handling. Used only when 'AllowAllCaptiveNetworkPlugins 'is 'false'.</string>
+					<string>The array of captive networking apps whose traffic is allowed outside the VPN tunnel, to perform captive network handling. Used only when 'AllowAllCaptiveNetworkPlugins' is 'false'.</string>
 					<key>pfm_exclude</key>
 					<array>
 						<dict>
@@ -3370,6 +3384,10 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 					</array>
 					<key>pfm_name</key>
 					<string>AllowedCaptiveNetworkPlugins</string>
+					<key>pfm_platforms</key>
+					<array>
+						<string>iOS</string>
+					</array>
 					<key>pfm_subkeys</key>
 					<array>
 						<dict>
@@ -3383,10 +3401,6 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 						<dict>
 							<key>pfm_name</key>
 							<string>AllowedCaptiveNetworkPluginElement</string>
-							<key>pfm_platforms</key>
-							<array>
-								<string>iOS</string>
-							</array>
 							<key>pfm_subkeys</key>
 							<array>
 								<dict>
@@ -3418,6 +3432,10 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 					<string>An array that contains an arbitrary number of service exceptions.</string>
 					<key>pfm_name</key>
 					<string>ServiceExceptions</string>
+					<key>pfm_platforms</key>
+					<array>
+						<string>iOS</string>
+					</array>
 					<key>pfm_subkeys</key>
 					<array>
 						<dict>
@@ -3477,10 +3495,6 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 						<dict>
 							<key>pfm_name</key>
 							<string>ServiceExceptionElement</string>
-							<key>pfm_platforms</key>
-							<array>
-								<string>iOS</string>
-							</array>
 							<key>pfm_subkeys</key>
 							<array>
 								<dict>
@@ -3536,6 +3550,10 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 					<string>An array that contains an arbitrary number of tunnel configurations.</string>
 					<key>pfm_name</key>
 					<string>TunnelConfigurations</string>
+					<key>pfm_platforms</key>
+					<array>
+						<string>iOS</string>
+					</array>
 					<key>pfm_require</key>
 					<string>always</string>
 					<key>pfm_subkeys</key>
@@ -4253,10 +4271,6 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 						<dict>
 							<key>pfm_name</key>
 							<string>TunnelConfigurationElement</string>
-							<key>pfm_platforms</key>
-							<array>
-								<string>iOS</string>
-							</array>
 							<key>pfm_subkeys</key>
 							<array>
 								<dict>
@@ -4320,6 +4334,10 @@ NAT keepalive offload has an impact on the battery life due to the extra workloa
 					<string>If '1', allows the user to disable the VPN configuration.</string>
 					<key>pfm_name</key>
 					<string>UIToggleEnabled</string>
+					<key>pfm_platforms</key>
+					<array>
+						<string>iOS</string>
+					</array>
 					<key>pfm_range_list</key>
 					<array>
 						<integer>0</integer>
@@ -5011,7 +5029,7 @@ Split-tunnel configurations can direct all DNS queries to the VPN DNS servers be
 				</dict>
 				<dict>
 					<key>pfm_description</key>
-					<string>The name of the group. For hybrid authentication, the string needs to end with 'hybrid'.
+					<string>The name of the group. For hybrid authentication, the string needs to end with “hybrid”.
 Present only for Cisco IPSec if 'AuthenticationMethod' is 'SharedSecret'.</string>
 					<key>pfm_exclude</key>
 					<array>
@@ -6051,14 +6069,9 @@ This key is valid only if the value of 'DomainAction' is 'ConnectIfNeeded'.</str
 			<array>
 				<dict>
 					<key>pfm_description</key>
-					<string>IP address or hostname of the VPN server</string>
+					<string>IP address or hostname of the VPN server.</string>
 					<key>pfm_name</key>
 					<string>RemoteAddress</string>
-					<key>pfm_platforms</key>
-					<array>
-						<string>iOS</string>
-						<string>macOS</string>
-					</array>
 					<key>pfm_require</key>
 					<string>always</string>
 					<key>pfm_title</key>
@@ -6068,14 +6081,9 @@ This key is valid only if the value of 'DomainAction' is 'ConnectIfNeeded'.</str
 				</dict>
 				<dict>
 					<key>pfm_description</key>
-					<string>The VPN account username</string>
+					<string>The VPN account username.</string>
 					<key>pfm_name</key>
 					<string>AuthName</string>
-					<key>pfm_platforms</key>
-					<array>
-						<string>iOS</string>
-						<string>macOS</string>
-					</array>
 					<key>pfm_require</key>
 					<string>push</string>
 					<key>pfm_title</key>
@@ -7110,6 +7118,33 @@ Available in iOS 14.2 and later, and macOS 11 and later. Not available in watchO
 					<key>pfm_type</key>
 					<string>integer</string>
 				</dict>
+				<dict>
+					<key>pfm_description</key>
+					<string>The VPN account password. Only used if AuthenticationMethod is Password.</string>
+					<key>pfm_exclude</key>
+					<array>
+						<dict>
+							<key>pfm_target_conditions</key>
+							<array>
+								<dict>
+									<key>pfm_n_range_list</key>
+									<array>
+										<string>Password</string>
+										<string>Password+Certificate</string>
+									</array>
+									<key>pfm_target</key>
+									<string>VPN.AuthenticationMethod</string>
+								</dict>
+							</array>
+						</dict>
+					</array>
+					<key>pfm_name</key>
+					<string>AuthPassword</string>
+					<key>pfm_title</key>
+					<string>Account Password</string>
+					<key>pfm_type</key>
+					<string>string</string>
+				</dict>
 			</array>
 			<key>pfm_title</key>
 			<string>VPN</string>
@@ -7241,7 +7276,7 @@ Available in iOS 14.2 and later, and macOS 11 and later. Not available in watchO
 				</dict>
 				<dict>
 					<key>pfm_description</key>
-					<string>The port number of the HTTP proxy. This field is required if 'HTTPProxy' is specified.</string>
+					<string>The host name of the HTTP proxy.</string>
 					<key>pfm_exclude</key>
 					<array>
 						<dict>
@@ -7283,7 +7318,7 @@ Available in iOS 14.2 and later, and macOS 11 and later. Not available in watchO
 						</dict>
 					</array>
 					<key>pfm_description</key>
-					<string>The host name of the HTTP proxy.</string>
+					<string>The port number of the HTTP proxy. This field is required if 'HTTPProxy' is specified.</string>
 					<key>pfm_exclude</key>
 					<array>
 						<dict>
@@ -7637,7 +7672,7 @@ Available in iOS 14.2 and later, and macOS 11 and later. Not available in watchO
 	<key>pfm_unique</key>
 	<false/>
 	<key>pfm_version</key>
-	<integer>6</integer>
+	<integer>7</integer>
 	<key>pfmx_supported_oses</key>
 	<dict>
 		<key>iOS</key>
