--- a/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
+++ b/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
@@ -139,6 +139,7 @@ A profile can consist of payloads with different version numbers. For example, c
 				<string>General</string>
 				<string>Enrollment Actions</string>
 				<string>User Entry</string>
+				<string>Webhooks</string>
 				<string>Help</string>
 				<string>Jamf Pro only</string>
 				<string>Debugging</string>
@@ -171,6 +172,10 @@ A profile can consist of payloads with different version numbers. For example, c
 					<string>totalDownloadBytes</string>
 					<string>computerNameTemplate</string>
 					<string>hideActionLabels</string>
+				</array>
+				<key>Webhooks</key>
+				<array>
+					<string>webhooks</string>
 				</array>
 				<key>Help</key>
 				<array>
@@ -1204,6 +1209,65 @@ A profile can consist of payloads with different version numbers. For example, c
 			<string>Enrollment Actions</string>
 			<key>pfm_type</key>
 			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>1.2</string>
+			<key>pfm_name</key>
+			<string>webhooks</string>
+			<key>pfm_type</key>
+			<string>dictionary</string>
+			<key>pfm_title</key>
+			<string>Webhooks</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_name</key>
+					<string>started</string>
+					<key>pfm_title</key>
+					<string>Started Webhooks</string>
+					<key>pfm_description</key>
+					<string>Webhooks called when Setup Manager starts its workflow.</string>
+					<key>pfm_type</key>
+					<string>array</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_title</key>
+							<string>Webhook URLs</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_format</key>
+							<string>^https://.*$</string>
+						</dict>
+					</array>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/Jamf-Concepts/Setup-Manager/blob/main/Docs/Webhooks.md</string>
+				</dict>
+				<dict>
+					<key>pfm_name</key>
+					<string>finished</string>
+					<key>pfm_title</key>
+					<string>Finished Webhooks</string>
+					<key>pfm_description</key>
+					<string>Webhooks called when Setup Manager finishes its workflow.</string>
+					<key>pfm_type</key>
+					<string>array</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_title</key>
+							<string>Webhook URLs</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_format</key>
+							<string>^https://.*$</string>
+						</dict>
+					</array>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/Jamf-Concepts/Setup-Manager/blob/main/Docs/Webhooks.md</string>
+				</dict>
+			</array>
 		</dict>
 	</array>
 	<key>pfm_targets</key>
