--- a/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
+++ b/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
@@ -824,6 +824,114 @@ A profile can consist of payloads with different version numbers. For example, c
 					<key>pfm_description</key>
 					<string></string>
 					<key>pfm_name</key>
+					<string>realname</string>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_description</key>
+							<string>A pre-populated value for the Full Name field.</string>
+							<key>pfm_documentation_url</key>
+							<string>https://github.com/Jamf-Concepts/Setup-Manager/blob/main/ConfigurationProfile.md#default</string>
+							<key>pfm_name</key>
+							<string>default</string>
+							<key>pfm_title</key>
+							<string>Full Name Default</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_app_min</key>
+							<string>1.2</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>A placeholder value for Full Name. This is displayed in gray when no value has been entered.</string>
+							<key>pfm_documentation_url</key>
+							<string>https://github.com/Jamf-Concepts/Setup-Manager/blob/main/ConfigurationProfile.md#placeholder</string>
+							<key>pfm_name</key>
+							<string>placeholder</string>
+							<key>pfm_title</key>
+							<string>Full Name Placeholder</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_app_min</key>
+							<string>1.2</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>Options displayed in a dropdown menu for Full Name.</string>
+							<key>pfm_documentation_url</key>
+							<string>https://github.com/Jamf-Concepts/Setup-Manager/blob/main/ConfigurationProfile.md#options</string>
+							<key>pfm_name</key>
+							<string>options</string>
+							<key>pfm_subkeys</key>
+							<array>
+								<dict>
+									<key>pfm_title</key>
+									<string>Preset Options for Full Name</string>
+									<key>pfm_type</key>
+									<string>string</string>
+								</dict>
+							</array>
+							<key>pfm_title</key>
+							<string>Full Name Options</string>
+							<key>pfm_type</key>
+							<string>array</string>
+							<key>pfm_app_min</key>
+							<string>1.2</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>A regular expression used to validate the value of Full Name.</string>
+							<key>pfm_documentation_url</key>
+							<string>https://github.com/Jamf-Concepts/Setup-Manager/blob/main/ConfigurationProfile.md#validation</string>
+							<key>pfm_name</key>
+							<string>validation</string>
+							<key>pfm_title</key>
+							<string>Full Name Validation</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_app_min</key>
+							<string>1.2</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>A message displayed to the user when Full Name fails to match the regular expression.</string>
+							<key>pfm_documentation_url</key>
+							<string>https://github.com/Jamf-Concepts/Setup-Manager/blob/main/ConfigurationProfile.md#validationmessage</string>
+							<key>pfm_name</key>
+							<string>validationMessage</string>
+							<key>pfm_title</key>
+							<string>Full Name Validation Message</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_app_min</key>
+							<string>1.2</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>Override the default label for the Full Name field.</string>
+							<key>pfm_documentation_url</key>
+							<string>https://github.com/Jamf-Concepts/Setup-Manager/blob/main/ConfigurationProfile.md#label-1</string>
+							<key>pfm_name</key>
+							<string>label</string>
+							<key>pfm_title</key>
+							<string>Full Name Label</string>
+							<key>pfm_type</key>
+							<string>string</string>
+							<key>pfm_default</key>
+							<string>Full Name</string>
+							<key>pfm_app_min</key>
+							<string>1.2</string>
+						</dict>
+					</array>
+					<key>pfm_title</key>
+					<string>Full Name</string>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+				<dict>
+					<key>pfm_description</key>
+					<string></string>
+					<key>pfm_name</key>
 					<string>department</string>
 					<key>pfm_subkeys</key>
 					<array>
